@@ -4,7 +4,7 @@ Pushing a semantic version tag builds, tests, and publishes desktop artifacts fo
 
 ## What ships
 
-Two files per target, ten in total, plus a `SHA256SUMS.txt`:
+Two files per target except `macos-x64`, which ships the jar alone, so nine in all, plus a `SHA256SUMS.txt`.  The `macos-arm64` zip holds `Umamo.app`; the other app images unpack to an `umamo/` folder:
 
 | File                                     | Note                                                                                                                                                                                        |
 | ---------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
@@ -23,6 +23,8 @@ Targets and the runner each is built on:
 
 Every leg builds on its own OS and architecture.  Unlike the uber jar, an application image cannot be cross-produced: jpackage jlinks the *host* JDK into the image, so cross-resolving natives would bundle one platform's Skiko/LWJGL inside another platform's runtime.  The package job passes `-Pumamo.requireTargetIsHost=true` so an unexpected runner `os.arch` fails the build rather than shipping an artifact that runs nowhere.
 
+The bundled runtime is JDK 21 everywhere except `macos-arm64`, which packages with JDK 27 (`-Pumamo.packagingJavaHome`, set by the leg's `packagingJdk`): only JDK 27's jpackage accepts a macOS version starting with `0`, and the fix was never backported.  That leg therefore follows the JDK feature releases (28 in March 2027) until the JDK 29 LTS; Linux and Windows stay on 21 until Temurin 27 ships for Windows or 29 arrives.  Intel Macs get the jar only: Temurin will never publish 27 for macOS x64.  Re-check a new JDK before moving to it - Compose's default jlink module set includes `jdk.crypto.ec`, deprecated and empty since JDK 22, and jlink fails the release it is removed in.
+
 Out of scope until alpha: code signing, notarization, native installers, auto-update, and any Android artifact.  See `TODO.md` § Build and Distribute.
 
 ## File associations
@@ -33,10 +35,10 @@ The `.uma` document type (`application/vnd.umamo.uma+zip`, `docs/format/UMA.md` 
 | -------- | -------------------------------------------------------------------------------------------------------------------------------------------------- | ---------------------------- |
 | Linux    | Not registered.  The app image ships `lib/app/resources/umamo-uma.xml` and `umamo.desktop`; the README gives the two per-user `xdg-*` commands.    | deb / rpm register the type. |
 | Windows  | Not registered.  *Open with* only.                                                                                                                 | msi / exe register the type. |
-| macOS    | The app image's own `Info.plist` carries `CFBundleDocumentTypes`, so an unpacked `umamo.app` is the handler with no installer - but see below.     | Same.                        |
+| macOS    | The app image's own `Info.plist` carries `CFBundleDocumentTypes`, so an unpacked `Umamo.app` is the handler with no installer - but see below.     | Same.                        |
 | Android  | The manifest's VIEW intent filters; no artifact ships yet.                                                                                         | n/a                          |
 
-The macOS legs publish the uber jar only until JDK 27 (the `appImage: false` note in `release.yml`), and a jar has no bundle to associate.  Setting `appImage` back to `true` is therefore also what switches the macOS association on; the open-file handler in `Main.kt` is already in place for it and has not been exercised on a real bundle.
+The `macos-arm64` leg publishes `Umamo.app`, so the association is live on Apple silicon Macs; Intel Macs get the jar, which has no bundle to associate.  The open-file handler in `Main.kt` meets a real bundle for the first time with it, so check a Finder double-click - at launch, and while running - on a Mac before publishing.
 
 `OsAssociationFilesTest` (`:desktop`) holds the build script, the manifest, and both freedesktop files to the codec's `Uma.MIME_TYPE`, and evaluates the freedesktop magic against a file the writer really produces.  Those files are declared as inputs of `:desktop`'s test task - they are not on its classpath, so without that an edit to one leaves the test up to date and unrun.
 
@@ -51,7 +53,7 @@ A released version is always a plain `MAJOR.MINOR.PATCH`.  Between releases mast
    ```bash
    git tag vX.Y.Z && git push origin vX.Y.Z
    ```
-5. The workflow creates the release as a **draft**, which publishes as a full release rather than a prerelease: GitHub's latest release, which download links and update checks follow, skips prereleases.  Download the artifacts and launch at least one per OS before publishing.  The CI does not test the packaged binaries.
+5. The workflow creates the release as a **draft**, which publishes as a full release rather than a prerelease: GitHub's latest release, which download links and update checks follow, skips prereleases.  Every app image passes a launch smoke test in CI first (`.github/scripts/launch-smoke-test.sh` and `.ps1`: they start the unpacked archive and read its session log), so by hand before publishing check only what CI cannot see: Gatekeeper and Finder on a real Mac, SmartScreen on Windows, and a real GPU.
 6. Publish: `gh release edit vX.Y.Z --draft=false`, or discard and re-tag:
    ```bash
    gh release delete vX.Y.Z --yes
@@ -79,7 +81,8 @@ export JAVA_HOME=/usr/lib/jvm/java-21-openjdk-amd64
 
 Then check the app image at `app/desktop/build/compose/binaries/main/app/`:
 
-* `umamo/lib/app/umamo.cfg` — the `[JavaOptions]` block must carry `java-options=-XX:MaxRAMPercentage=50` and **must not** carry `-Dumamo.testCmo3`; the release workflow asserts both.  Compose forwards `application.jvmArgs` to jpackage as `--java-options`, so anything added there ships; the corpus-preview override is deliberately set on the `run` task alone (see the comment at the bottom of `app/desktop/build.gradle.kts`).
-* `umamo/lib/runtime/release` — the `MODULES=` line must list `java.instrument`, `java.sql`, `java.xml`, `jdk.security.auth`, and `jdk.unsupported`.  The release workflow asserts this too.
+* `umamo/lib/app/umamo.cfg` (`Umamo.app/Contents/app/Umamo.cfg` on macOS) — the `[JavaOptions]` block must carry `java-options=-XX:MaxRAMPercentage=50`, `java-options=--enable-native-access=ALL-UNNAMED`, and `java-options=--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED`, and **must not** carry `-Dumamo.testCmo3`; the release workflow asserts all four.  Compose forwards `application.jvmArgs` to jpackage as `--java-options`, so anything added there ships; the corpus-preview override is deliberately set on the `run` task alone (see the comment at the bottom of `app/desktop/build.gradle.kts`).
+* `umamo/lib/runtime/release` — the `MODULES=` line must list `java.instrument`, `java.sql`, `java.xml`, `jdk.security.auth`, and `jdk.unsupported`, and `JAVA_VERSION` must be the leg's packaging JDK.  The release workflow asserts both.
+* The launch smoke test runs locally too, against an unpacked app image and a display (Xvfb on WSL or a headless Linux): `bash .github/scripts/launch-smoke-test.sh umamo/bin/umamo ~/.local/share/umamo/logs true`.
 
 `suggestRuntimeModules` under-reports: it misses reflective and service-loaded edges, and does not name `java.xml` even though JDOM — and therefore all of CMO3 read/write — needs it.  Treat its output as a lower bound and confirm with `jdeps --list-deps` when adding a dependency.
